; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_gdns.c_gdns_thread_create.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_gdns.c_gdns_thread_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@active_gdns = common dso_local global i32 0, align 4
@gdns_thread = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@dns_worker = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Return code from pthread_create(): %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gdns_thread_create() #0 {
  %1 = alloca i32, align 4
  store i32 1, i32* @active_gdns, align 4
  %2 = call i32 @pthread_create(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gdns_thread, i32 0, i32 0), i32* null, i8* bitcast (i32* @dns_worker to i8*), i32* null)
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* %1, align 4
  %7 = call i32 @FATAL(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %6)
  br label %8

8:                                                ; preds = %5, %0
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gdns_thread, i32 0, i32 0), align 4
  %10 = call i32 @pthread_detach(i32 %9)
  ret void
}

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i8*, i32*) #1

declare dso_local i32 @FATAL(i8*, i32) #1

declare dso_local i32 @pthread_detach(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
